Fix Portuguese translation

--- a/pt/LC_MESSAGES/gamestats.po
+++ b/pt/LC_MESSAGES/gamestats.po
@@ -94,7 +94,7 @@ msgid ""
 "Profile created. To add accounts use {prefix}add <account>\n"
 "Supported accounts: {accounts}"
 msgstr ""
-"Perfil criado com sucesso! Para adicionar contas, use {prefixo}add <conta>\n"
+"Perfil criado com sucesso! Para adicionar contas, use {prefix}add <conta>\n"
 "Contas suportadas: {accounts}"
 
 msgid "Request accepted"
@@ -130,9 +130,9 @@ msgid ""
 "For example enter the following: **{prefix}add steam**"
 msgstr ""
 "Desculpe, a conta {account} ainda não é suportada.\n"
-"As contas suportadas são {contas}\n"
+"As contas suportadas são {account}\n"
 "\n"
-"Por exemplo, digite o seguinte: ** {prefixo} adicionar vapor **"
+"Por exemplo, digite o seguinte: ** {prefix} adicionar vapor **"
 
 msgid "Supported accounts: {accounts}"
 msgstr "Contas suportadas: {accounts}"
