--- a/gamestats.pot
+++ b/gamestats.pot
@@ -1,4 +1,5 @@
 # Translations template for GameStats.
+# Copyright (C) 2018 GameStats
 # This file is distributed under the same license as the GameStats project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
 #
@@ -7,15 +8,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.3\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2018-04-01 14:09+0100\n"
-"POT-Creation-Date: 2018-07-28 11:35+0100\n"
+"POT-Creation-Date: 2018-07-31 18:14+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.3\n"
 "Generated-By: Babel 2.6.0\n"
 
 msgid "*Warning*: Different spelling of {user}"
@@ -25,6 +24,18 @@ msgid "<:nms:346638509114785808>No Man's Sky Universe Map for {guild}"
 msgstr ""
 
 msgid "A {platforms} account is required to obtain {game} stats"
+msgstr ""
+
+msgid "Added group category **{category_name}** to {role_count} roles"
+msgstr ""
+
+msgid "Added group category **{name}**: {description}"
+msgstr ""
+
+msgid "Added group {role}"
+msgstr ""
+
+msgid "Added {account}"
 msgstr ""
 
 msgid "Available languages: [{languages}]"
@@ -42,7 +53,16 @@ msgid ""
 "{groups}"
 msgstr ""
 
+msgid "Compiling stats of {number} players..."
+msgstr ""
+
+msgid "Completed reset of {}, {}"
+msgstr ""
+
 msgid "Could not find {user} on {server}, please try again"
+msgstr ""
+
+msgid "Default FC for this server registered as {name} on {server}"
 msgstr ""
 
 msgid "Distance between {user1} and {user2}: {dist}ly"
@@ -54,7 +74,19 @@ msgstr ""
 msgid "Files for {language_key} not found"
 msgstr ""
 
+msgid ""
+"For this stat please reply with a list of number -> role - one on each line.\n"
+"For example:\n"
+"\n"
+"1000 @Best Rank\n"
+"500 Nearly Best\n"
+"100 Newbie"
+msgstr ""
+
 msgid "I tried to DM you {mention} but you have DMs disabled, please DM me that command."
+msgstr ""
+
+msgid "I'm missing permissions to grant the role {role} to {name}. Please check that I have the Manage Roles permission and {role} is below me in the role list."
 msgstr ""
 
 msgid "Languages reloaded"
@@ -72,6 +104,21 @@ msgstr ""
 msgid "Looking up {user} on {game}..."
 msgstr ""
 
+msgid "No ARK server registered for this server. Register with {prefix}ark register <ip> <port>"
+msgstr ""
+
+msgid "No Battlerite profile found for {profile}."
+msgstr ""
+
+msgid "No CSGO players found on this server. Do {prefix}steam first."
+msgstr ""
+
+msgid "No PUBG players found on this server. Do {prefix}pubg first."
+msgstr ""
+
+msgid "No Siege players found on this server. Do {prefix}siege first."
+msgstr ""
+
 msgid "No characters found on that account. Please confirm account and try again."
 msgstr ""
 
@@ -81,7 +128,22 @@ msgstr ""
 msgid "No groups defined on {server}, use {command}"
 msgstr ""
 
+msgid "No matches found. Submit some via {prefix}csgo match <share code>"
+msgstr ""
+
+msgid "No operator information found for {name} on {platform} {region}"
+msgstr ""
+
+msgid "No ranked CSGO players found on this server. Do {prefix}steam first."
+msgstr ""
+
+msgid "No recent matches found for {account}"
+msgstr ""
+
 msgid "No response from user."
+msgstr ""
+
+msgid "No season information found for {name} on {platform} {region}"
 msgstr ""
 
 msgid "No {game} players found on this server. Do {prefix}{game_key} first."
@@ -90,15 +152,36 @@ msgstr ""
 msgid "No {game} stats found for {user} on {platform}"
 msgstr ""
 
+msgid "Player {account} not found"
+msgstr ""
+
+msgid "Player {user} (aka {nickname}) has no stats for season {season}."
+msgstr ""
+
 msgid "Please enter your {game} account name:"
 msgstr ""
 
 msgid "Portal code"
 msgstr ""
 
+msgid "Prestige role reset cancelled."
+msgstr ""
+
+msgid "Prestige roles not setup for {guild}, game: {game}, stat: {stat}"
+msgstr ""
+
+msgid "Prestige setup cancelled."
+msgstr ""
+
+msgid "Prestige setup complete."
+msgstr ""
+
 msgid ""
 "Profile created. To add accounts use {prefix}add <account>\n"
 "Supported accounts: {accounts}"
+msgstr ""
+
+msgid "Removed prestige for {}, {}"
 msgstr ""
 
 msgid "Request accepted"
@@ -113,10 +196,25 @@ msgstr ""
 msgid "Requesting permission from {name}"
 msgstr ""
 
+msgid "Resetting Prestige roles..."
+msgstr ""
+
+msgid "Searching for FC {} on {}..."
+msgstr ""
+
+msgid ""
+"Select a stat to base rank on by replying with one from the below list:\n"
+"\n"
+"{}"
+msgstr ""
+
 msgid "Set language for {guild_name} to {language}"
 msgstr ""
 
 msgid "Shows your stats from {game}"
+msgstr ""
+
+msgid "Sorry I can't find {name} on {server}, are you se that's correct?"
 msgstr ""
 
 msgid "Sorry that account isn't on your profile."
@@ -142,6 +240,9 @@ msgid ""
 "{games}"
 msgstr ""
 
+msgid "That group category is already defined for this server."
+msgstr ""
+
 msgid "That user hasn't added an account for {game}"
 msgstr ""
 
@@ -163,19 +264,43 @@ msgstr ""
 msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
 msgstr ""
 
+msgid "The roles format was incorrect, please try again. (Or cancel with x)"
+msgstr ""
+
+msgid "The user {user} does not appear valid, please check your profile is not private and try again."
+msgstr ""
+
 msgid "The user {user} does not have a {game} profile on {platform}."
 msgstr ""
 
-msgid "The user {} does not appear valid, please check your profile is not private and try again."
+msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
 msgstr ""
 
-msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
+msgid ""
+"There was an issue processing that command, please try again.\n"
+"If the issue continues please seek help in the support server on the help menu."
+msgstr ""
+
+msgid "There was an issue retrieving that players stats from the PUBG API. Please try again in a few minutes."
+msgstr ""
+
+msgid "There was an issue retrieving your profile from Uplay. Please try again in a few minutes."
+msgstr ""
+
+msgid ""
+"To set up rank roles do {prefix}prestige <game>\n"
+"\n"
+"Supported games:\n"
+"{games}"
 msgstr ""
 
 msgid "Top {top_count} games currently being played across {server_count} servers"
 msgstr ""
 
 msgid "Top {top_count} games currently being played in {guild_name}"
+msgstr ""
+
+msgid "WARNING: This will attempt to remove Discord roles related to this Prestige role, are you sure you want to continue?"
 msgstr ""
 
 msgid "Warning: You have multiple accounts for {game} you might want to delete one with {prefix}delete {game_key} or change your primary account with {prefix}primary {game_key}"
@@ -220,6 +345,18 @@ msgstr ""
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr ""
 
+msgid "You need to add some games, DM me with {prefix}add <account>. See {prefix}accounts for supported accounts."
+msgstr ""
+
+msgid "You took too long to respond, Prestige setup cancelled."
+msgstr ""
+
+msgid "You took too long to respond, prestige setup cancelled."
+msgstr ""
+
+msgid "Your character is not part of any FC."
+msgstr ""
+
 msgid "Your profile is private. This setting can be modified in Overwatch under Options – Social."
 msgstr ""
 
@@ -233,6 +370,9 @@ msgid "{game} account not found for {user}"
 msgstr ""
 
 msgid "{game} account not found for {user} on {platform}"
+msgstr ""
+
+msgid "{game} is not currently supported, check back soon."
 msgstr ""
 
 msgid "{game} live games for {guild}"
@@ -251,6 +391,12 @@ msgid "{language} not in list of available languages: {languages}"
 msgstr ""
 
 msgid "{name} declined"
+msgstr ""
+
+msgid "{name} does not appear to have any stats available."
+msgstr ""
+
+msgid "{user} does not does not appear to be a valid Z8Games user."
 msgstr ""
 
 msgid "{user}'s Home Base"
