--- a/nl/LC_MESSAGES/gamestats.po
+++ b/nl/LC_MESSAGES/gamestats.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.2\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2018-04-01 14:09+0100\n"
+"POT-Creation-Date: 2018-07-31 17:11+0100\n"
 "PO-Revision-Date: 2018-01-06 16:45+0000\n"
 "Last-Translator: Lesto#2003\n"
 "Language: nl\n"
@@ -16,7 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.3\n"
+"Generated-By: Babel 2.6.0\n"
 
 msgid "*Warning*: Different spelling of {user}"
 msgstr ""
@@ -27,8 +27,23 @@ msgstr "No Man's Sky Universe Map voor {guild}."
 msgid "A {platforms} account is required to obtain {game} stats"
 msgstr "Een {platforms} account is nodig om statistieken to krijgen voor {game}."
 
+msgid "Added group category **{category_name}** to {role_count} roles"
+msgstr ""
+
+msgid "Added group category **{name}**: {description}"
+msgstr ""
+
+msgid "Added group {role}"
+msgstr ""
+
+msgid "Added {account}"
+msgstr ""
+
 msgid "Available languages: [{languages}]"
 msgstr "beschikbaren talen:[{languages}]"
+
+msgid "Character not found."
+msgstr ""
 
 msgid "Check your DMs"
 msgstr "Bekijk je PBs."
@@ -42,6 +57,18 @@ msgstr ""
 "\n"
 "{groups}"
 
+msgid "Compiling stats of {number} players..."
+msgstr ""
+
+msgid "Completed reset of {}, {}"
+msgstr ""
+
+msgid "Could not find {user} on {server}, please try again"
+msgstr ""
+
+msgid "Default FC for this server registered as {name} on {server}"
+msgstr ""
+
 msgid "Distance between {user1} and {user2}: {dist}ly"
 msgstr "Afstand tussen {user1} en {user2}: {dist}M"
 
@@ -51,8 +78,20 @@ msgstr "Afstand tot middelpunt."
 msgid "Files for {language_key} not found"
 msgstr "Bestanden voor {language_key} niet gevonden."
 
+msgid ""
+"For this stat please reply with a list of number -> role - one on each line.\n"
+"For example:\n"
+"\n"
+"1000 @Best Rank\n"
+"500 Nearly Best\n"
+"100 Newbie"
+msgstr ""
+
 msgid "I tried to DM you {mention} but you have DMs disabled, please DM me that command."
 msgstr "Ik heb geprobeerd een bericht naar {mention} te sturen maar je hebt PBs uitstaan, Kunt u mij die opdracht doormiddel van PB sturen."
+
+msgid "I'm missing permissions to grant the role {role} to {name}. Please check that I have the Manage Roles permission and {role} is below me in the role list."
+msgstr ""
 
 msgid "Languages reloaded"
 msgstr "Talen herladen."
@@ -69,14 +108,47 @@ msgstr "{user} aan het zoeken in {game} op {platform}..."
 msgid "Looking up {user} on {game}..."
 msgstr "{user} aan het zoeken in {game}..."
 
+msgid "No ARK server registered for this server. Register with {prefix}ark register <ip> <port>"
+msgstr ""
+
+msgid "No Battlerite profile found for {profile}."
+msgstr ""
+
+msgid "No CSGO players found on this server. Do {prefix}steam first."
+msgstr ""
+
+msgid "No PUBG players found on this server. Do {prefix}pubg first."
+msgstr ""
+
+msgid "No Siege players found on this server. Do {prefix}siege first."
+msgstr ""
+
+msgid "No characters found on that account. Please confirm account and try again."
+msgstr ""
+
 msgid "No games currently being played."
 msgstr "Er worden momenteel geen spellen gespeeld."
 
 msgid "No groups defined on {server}, use {command}"
 msgstr "Geen groepen gedefinieerd op {server}, gebruik {command}."
 
+msgid "No matches found. Submit some via {prefix}csgo match <share code>"
+msgstr ""
+
+msgid "No operator information found for {name} on {platform} {region}"
+msgstr ""
+
+msgid "No ranked CSGO players found on this server. Do {prefix}steam first."
+msgstr ""
+
+msgid "No recent matches found for {account}"
+msgstr ""
+
 msgid "No response from user."
 msgstr "Geen antwoord gekregen van {user}"
+
+msgid "No season information found for {name} on {platform} {region}"
+msgstr ""
 
 msgid "No {game} players found on this server. Do {prefix}{game_key} first."
 msgstr "Geen {game} spelers gevonden op deze server, Doe {prefix}[game_key} eerst."
@@ -84,10 +156,28 @@ msgstr "Geen {game} spelers gevonden op deze server, Doe {prefix}[game_key} eers
 msgid "No {game} stats found for {user} on {platform}"
 msgstr "Geen {game} statistieken gevonden voor {user} op {platform}"
 
+msgid "Player {account} not found"
+msgstr ""
+
+msgid "Player {user} (aka {nickname}) has no stats for season {season}."
+msgstr ""
+
 msgid "Please enter your {game} account name:"
 msgstr "Vul uw {game} gebruikersnaam alstublieft in:"
 
 msgid "Portal code"
+msgstr ""
+
+msgid "Prestige role reset cancelled."
+msgstr ""
+
+msgid "Prestige roles not setup for {guild}, game: {game}, stat: {stat}"
+msgstr ""
+
+msgid "Prestige setup cancelled."
+msgstr ""
+
+msgid "Prestige setup complete."
 msgstr ""
 
 msgid ""
@@ -96,6 +186,9 @@ msgid ""
 msgstr ""
 "Profiel gemaakt. Om meer accounts toe te voegen gebruik {prefix}add <account>\n"
 "Ondersteunde accounts: {accounts}"
+
+msgid "Removed prestige for {}, {}"
+msgstr ""
 
 msgid "Request accepted"
 msgstr ""
@@ -109,11 +202,26 @@ msgstr ""
 msgid "Requesting permission from {name}"
 msgstr ""
 
+msgid "Resetting Prestige roles..."
+msgstr ""
+
+msgid "Searching for FC {} on {}..."
+msgstr ""
+
+msgid ""
+"Select a stat to base rank on by replying with one from the below list:\n"
+"\n"
+"{}"
+msgstr ""
+
 msgid "Set language for {guild_name} to {language}"
 msgstr "taal instellen voor {guild_name} in {language}"
 
 msgid "Shows your stats from {game}"
 msgstr "Laat je statistieken zien van {game}"
+
+msgid "Sorry I can't find {name} on {server}, are you se that's correct?"
+msgstr ""
 
 msgid "Sorry that account isn't on your profile."
 msgstr "Sorry dat account is niet op je profiel"
@@ -144,6 +252,9 @@ msgstr ""
 "supported games:\n"
 "{games}"
 
+msgid "That group category is already defined for this server."
+msgstr ""
+
 msgid "That user hasn't added an account for {game}"
 msgstr "Die gebruiker heeft nog geen account toegevoegd voor {game}"
 
@@ -165,17 +276,44 @@ msgstr ""
 msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
 msgstr "De locatiecode moet de indeling HUKYA:XXXX:XXXX:XXXX:XXXX:XXXX Bekijk alstublieft uw code and probeer opnieuw."
 
+msgid "The roles format was incorrect, please try again. (Or cancel with x)"
+msgstr ""
+
+msgid "The user {user} does not appear valid, please check your profile is not private and try again."
+msgstr ""
+
 msgid "The user {user} does not have a {game} profile on {platform}."
 msgstr ""
 
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
 msgstr "Er zijn meerdere overeenkomsten, beantwoord met het juiste nummer."
 
+msgid ""
+"There was an issue processing that command, please try again.\n"
+"If the issue continues please seek help in the support server on the help menu."
+msgstr ""
+
+msgid "There was an issue retrieving that players stats from the PUBG API. Please try again in a few minutes."
+msgstr ""
+
+msgid "There was an issue retrieving your profile from Uplay. Please try again in a few minutes."
+msgstr ""
+
+msgid ""
+"To set up rank roles do {prefix}prestige <game>\n"
+"\n"
+"Supported games:\n"
+"{games}"
+msgstr ""
+
 msgid "Top {top_count} games currently being played across {server_count} servers"
 msgstr "De top {top_count} spellen die momenteel worden gespeeld door {server_count} servers"
 
 msgid "Top {top_count} games currently being played in {guild_name}"
 msgstr "De top {top_count} spellen die momenteel worden gespeeld in {guild_name}"
+
+msgid "WARNING: This will attempt to remove Discord roles related to this Prestige role, are you sure you want to continue?"
+msgstr ""
 
 msgid "Warning: You have multiple accounts for {game} you might want to delete one with {prefix}delete {game_key} or change your primary account with {prefix}primary {game_key}"
 msgstr "Waarschuwing: Je hebt meerdere accounts voor {game}, Misschien wil je er een verwijderen met {prefix}delete {game_key} of verander je primaire account met {prefix}primary {game_key}"
@@ -185,8 +323,24 @@ msgid ""
 "To find its location, place a Signal Booster and note down the code it shows when you get close, in the format HUKYA:XXXX:XXXX:XXXX:XXXX"
 msgstr "Wat is de locatie van je NMS thuisbasis?Om deze locatie the vinden, Plaats een SignaalVersterker en noteer de code die word weergegeven wanneer je in de buurt komt, in het formaat HUKYA:XXXX:XXXX:XXXX:XXXX"
 
+msgid "What is your character's name?"
+msgstr ""
+
+msgid ""
+"What is your steam account? Please reply below.\n"
+"It can be in the form of:\n"
+"Vanity URL (<https://steamcommunity.com/id/name>)\n"
+"Vanity name (name from url above)\n"
+"Profile URL (<https://steamcommunity.com/profiles/123456789012345>)\n"
+"Steam Community ID (123456789012345)\n"
+"Steam ID (STEAM_0:0:0123456)"
+msgstr ""
+
 msgid "What platform do you play {game} on? [{platforms}]"
 msgstr "Op welk platform speel je {game} op? [{platforms}]"
+
+msgid "What server is your character on?"
+msgstr ""
 
 msgid "You do not have permission to change the language on {guild}."
 msgstr "Je hebt geen toestemming om de taal te veranderen van {guild}"
@@ -203,6 +357,21 @@ msgstr "Je hebt al een account gemaakt {account}"
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr "Je moet een account toevoegen voor {game}, gebruik {prefix}add {game_key}"
 
+msgid "You need to add some games, DM me with {prefix}add <account>. See {prefix}accounts for supported accounts."
+msgstr ""
+
+msgid "You took too long to respond, Prestige setup cancelled."
+msgstr ""
+
+msgid "You took too long to respond, prestige setup cancelled."
+msgstr ""
+
+msgid "Your character is not part of any FC."
+msgstr ""
+
+msgid "Your profile is private. This setting can be modified in Overwatch under Options – Social."
+msgstr ""
+
 msgid "{channel} in {guild} registered to receive live match updates."
 msgstr "{channel} in {guild_name} geregistreerd voor live wedstrijd updates"
 
@@ -214,6 +383,9 @@ msgstr "Geen {game} account gevonden voor {user}"
 
 msgid "{game} account not found for {user} on {platform}"
 msgstr "Geen {game} account gevonden voor {user} op {platform}"
+
+msgid "{game} is not currently supported, check back soon."
+msgstr ""
 
 msgid "{game} live games for {guild}"
 msgstr "{game} Live spellen voor {guild}"
@@ -233,8 +405,17 @@ msgstr "{language} niet in de lijst met beschikbaren talen: {languages}"
 msgid "{name} declined"
 msgstr ""
 
+msgid "{name} does not appear to have any stats available."
+msgstr ""
+
+msgid "{user} does not does not appear to be a valid Z8Games user."
+msgstr ""
+
 msgid "{user}'s Home Base"
 msgstr "{user}'s Thuis Basis"
+
+msgid "{user}'s profile set to private. This setting can be modified in Overwatch under Options – Social."
+msgstr ""
 
 #~ msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
 #~ msgstr "De bot heeft de mogelijk om ingesloten links to sturen nodig, zorg ervoor dat het de \"ingesloten links\" toestemming heeft."
