--- a/pt/LC_MESSAGES/gamestats.po
+++ b/pt/LC_MESSAGES/gamestats.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.2\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2018-04-01 14:09+0100\n"
+"POT-Creation-Date: 2018-07-31 17:11+0100\n"
 "PO-Revision-Date: 2018-03-09 03:54+0000\n"
 "Last-Translator: Pedro Ricardo | PR#0001\n"
 "Language: pt_BR\n"
@@ -16,7 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.3\n"
+"Generated-By: Babel 2.6.0\n"
 
 msgid "*Warning*: Different spelling of {user}"
 msgstr ""
@@ -27,8 +27,23 @@ msgstr "<:nms:346638509114785808>Nenhum Mapa do universo do céu do homem para {
 msgid "A {platforms} account is required to obtain {game} stats"
 msgstr "Uma conta {platforms} é necessária para obter estatísticas do {game}"
 
+msgid "Added group category **{category_name}** to {role_count} roles"
+msgstr ""
+
+msgid "Added group category **{name}**: {description}"
+msgstr ""
+
+msgid "Added group {role}"
+msgstr ""
+
+msgid "Added {account}"
+msgstr ""
+
 msgid "Available languages: [{languages}]"
 msgstr "Idiomas disponíveis: [{languages}]"
+
+msgid "Character not found."
+msgstr ""
 
 msgid "Check your DMs"
 msgstr "Verifique seu DM"
@@ -42,6 +57,18 @@ msgstr ""
 "\n"
 "{groups}"
 
+msgid "Compiling stats of {number} players..."
+msgstr ""
+
+msgid "Completed reset of {}, {}"
+msgstr ""
+
+msgid "Could not find {user} on {server}, please try again"
+msgstr ""
+
+msgid "Default FC for this server registered as {name} on {server}"
+msgstr ""
+
 msgid "Distance between {user1} and {user2}: {dist}ly"
 msgstr "Distância entre {user1} e {user2}: {dist} ly"
 
@@ -51,8 +78,20 @@ msgstr "Distância ao centro"
 msgid "Files for {language_key} not found"
 msgstr "Os Arquivos para {language_key} não foram encontrado"
 
+msgid ""
+"For this stat please reply with a list of number -> role - one on each line.\n"
+"For example:\n"
+"\n"
+"1000 @Best Rank\n"
+"500 Nearly Best\n"
+"100 Newbie"
+msgstr ""
+
 msgid "I tried to DM you {mention} but you have DMs disabled, please DM me that command."
 msgstr "{mencionar} tentei enviar um DM pra você , mas você está com o DM desativado, por favor me mande esse comando."
+
+msgid "I'm missing permissions to grant the role {role} to {name}. Please check that I have the Manage Roles permission and {role} is below me in the role list."
+msgstr ""
 
 msgid "Languages reloaded"
 msgstr "Idiomas recarregados"
@@ -69,14 +108,47 @@ msgstr "Olhando para {user} no {game} na {platform}..."
 msgid "Looking up {user} on {game}..."
 msgstr "Olhando para {user} no {game}.."
 
+msgid "No ARK server registered for this server. Register with {prefix}ark register <ip> <port>"
+msgstr ""
+
+msgid "No Battlerite profile found for {profile}."
+msgstr ""
+
+msgid "No CSGO players found on this server. Do {prefix}steam first."
+msgstr ""
+
+msgid "No PUBG players found on this server. Do {prefix}pubg first."
+msgstr ""
+
+msgid "No Siege players found on this server. Do {prefix}siege first."
+msgstr ""
+
+msgid "No characters found on that account. Please confirm account and try again."
+msgstr ""
+
 msgid "No games currently being played."
 msgstr "Nenhum jogo em reprodução atualmente"
 
 msgid "No groups defined on {server}, use {command}"
 msgstr ""
 
+msgid "No matches found. Submit some via {prefix}csgo match <share code>"
+msgstr ""
+
+msgid "No operator information found for {name} on {platform} {region}"
+msgstr ""
+
+msgid "No ranked CSGO players found on this server. Do {prefix}steam first."
+msgstr ""
+
+msgid "No recent matches found for {account}"
+msgstr ""
+
 msgid "No response from user."
 msgstr "Não obtive nenhuma resposta do usuário"
+
+msgid "No season information found for {name} on {platform} {region}"
+msgstr ""
 
 msgid "No {game} players found on this server. Do {prefix}{game_key} first."
 msgstr "Nenhum jogador de {game} foi encontrado neste servidor. Use {prefix}{game_key}!"
@@ -84,11 +156,29 @@ msgstr "Nenhum jogador de {game} foi encontrado neste servidor. Use {prefix}{gam
 msgid "No {game} stats found for {user} on {platform}"
 msgstr "Nenhuma estatística do {game} foi encontrada para o {user} na {platform}"
 
+msgid "Player {account} not found"
+msgstr ""
+
+msgid "Player {user} (aka {nickname}) has no stats for season {season}."
+msgstr ""
+
 msgid "Please enter your {game} account name:"
 msgstr "Por favor insira o nome da conta do seu {game}:"
 
 msgid "Portal code"
 msgstr "Portal code"
+
+msgid "Prestige role reset cancelled."
+msgstr ""
+
+msgid "Prestige roles not setup for {guild}, game: {game}, stat: {stat}"
+msgstr ""
+
+msgid "Prestige setup cancelled."
+msgstr ""
+
+msgid "Prestige setup complete."
+msgstr ""
 
 msgid ""
 "Profile created. To add accounts use {prefix}add <account>\n"
@@ -96,6 +186,9 @@ msgid ""
 msgstr ""
 "Perfil criado com sucesso! Para adicionar contas, use {prefix}add <conta>\n"
 "Contas suportadas: {accounts}"
+
+msgid "Removed prestige for {}, {}"
+msgstr ""
 
 msgid "Request accepted"
 msgstr ""
@@ -109,11 +202,26 @@ msgstr ""
 msgid "Requesting permission from {name}"
 msgstr ""
 
+msgid "Resetting Prestige roles..."
+msgstr ""
+
+msgid "Searching for FC {} on {}..."
+msgstr ""
+
+msgid ""
+"Select a stat to base rank on by replying with one from the below list:\n"
+"\n"
+"{}"
+msgstr ""
+
 msgid "Set language for {guild_name} to {language}"
 msgstr "Definir idioma de {guild_name} para {language}"
 
 msgid "Shows your stats from {game}"
 msgstr "Mostra suas estatísticas de {game}"
+
+msgid "Sorry I can't find {name} on {server}, are you se that's correct?"
+msgstr ""
 
 msgid "Sorry that account isn't on your profile."
 msgstr "Desculpe, essa conta não está no seu perfil"
@@ -144,6 +252,9 @@ msgstr ""
 "Jogos suportados:\n"
 "{games}"
 
+msgid "That group category is already defined for this server."
+msgstr ""
+
 msgid "That user hasn't added an account for {game}"
 msgstr "Esse usuário não adicionou uma conta para {game}"
 
@@ -165,17 +276,44 @@ msgstr ""
 msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
 msgstr "O código de localização deve estar no formato HUKYA:XXXX:XXXX:XXXX:XXXX Verifique o seu código e tente novamente."
 
+msgid "The roles format was incorrect, please try again. (Or cancel with x)"
+msgstr ""
+
+msgid "The user {user} does not appear valid, please check your profile is not private and try again."
+msgstr ""
+
 msgid "The user {user} does not have a {game} profile on {platform}."
 msgstr ""
 
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
 msgstr "Existem várias combinações. Por favor, esclareça respondendo com o número correto da escolha?"
 
+msgid ""
+"There was an issue processing that command, please try again.\n"
+"If the issue continues please seek help in the support server on the help menu."
+msgstr ""
+
+msgid "There was an issue retrieving that players stats from the PUBG API. Please try again in a few minutes."
+msgstr ""
+
+msgid "There was an issue retrieving your profile from Uplay. Please try again in a few minutes."
+msgstr ""
+
+msgid ""
+"To set up rank roles do {prefix}prestige <game>\n"
+"\n"
+"Supported games:\n"
+"{games}"
+msgstr ""
+
 msgid "Top {top_count} games currently being played across {server_count} servers"
 msgstr "Os jogos Top {top_count} atualmente sendo jogados {server_count} em servidores"
 
 msgid "Top {top_count} games currently being played in {guild_name}"
 msgstr "Os jogos Top {top_count} atualmente sendo jogados em {guild_name}"
+
+msgid "WARNING: This will attempt to remove Discord roles related to this Prestige role, are you sure you want to continue?"
+msgstr ""
 
 msgid "Warning: You have multiple accounts for {game} you might want to delete one with {prefix}delete {game_key} or change your primary account with {prefix}primary {game_key}"
 msgstr "Aviso: você tem várias contas para {game}, você pode querer excluir um com {prefix}delete {game_key} ou alterar sua conta principal com {prefix}primary {game_key}"
@@ -187,8 +325,24 @@ msgstr ""
 "Qual é a localização da base de NMS?\n"
 "Para encontrar a sua localização, coloque um Signal Booster e anote o código que mostra quando chegar perto, no formato HUKYA:XXXX:XXXX:XXXX:XXXX"
 
+msgid "What is your character's name?"
+msgstr ""
+
+msgid ""
+"What is your steam account? Please reply below.\n"
+"It can be in the form of:\n"
+"Vanity URL (<https://steamcommunity.com/id/name>)\n"
+"Vanity name (name from url above)\n"
+"Profile URL (<https://steamcommunity.com/profiles/123456789012345>)\n"
+"Steam Community ID (123456789012345)\n"
+"Steam ID (STEAM_0:0:0123456)"
+msgstr ""
+
 msgid "What platform do you play {game} on? [{platforms}]"
 msgstr "Em que plataforma você joga {game} em? [{platforms}]"
+
+msgid "What server is your character on?"
+msgstr ""
 
 msgid "You do not have permission to change the language on {guild}."
 msgstr "Você não tem permissão para alterar o idioma em {guild}"
@@ -205,6 +359,21 @@ msgstr "Você já registrou {account}"
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr "Você precisa adicionar uma conta para o jogo {game}, usando o comando {prefix}add {game_key}"
 
+msgid "You need to add some games, DM me with {prefix}add <account>. See {prefix}accounts for supported accounts."
+msgstr ""
+
+msgid "You took too long to respond, Prestige setup cancelled."
+msgstr ""
+
+msgid "You took too long to respond, prestige setup cancelled."
+msgstr ""
+
+msgid "Your character is not part of any FC."
+msgstr ""
+
+msgid "Your profile is private. This setting can be modified in Overwatch under Options – Social."
+msgstr ""
+
 msgid "{channel} in {guild} registered to receive live match updates."
 msgstr "O canal {channel} no servidor {guild} foi registrado para recebe atualizações ao vivo."
 
@@ -216,6 +385,9 @@ msgstr "{game} conta não encontrada para {user}"
 
 msgid "{game} account not found for {user} on {platform}"
 msgstr "A conta no {game} do {user} não foi encontrada no {platform}"
+
+msgid "{game} is not currently supported, check back soon."
+msgstr ""
 
 msgid "{game} live games for {guild}"
 msgstr "{game} jogos ao vivo para {guild}"
@@ -235,8 +407,17 @@ msgstr "{language} não na lista de idiomas disponíveis: {languages}"
 msgid "{name} declined"
 msgstr ""
 
+msgid "{name} does not appear to have any stats available."
+msgstr ""
+
+msgid "{user} does not does not appear to be a valid Z8Games user."
+msgstr ""
+
 msgid "{user}'s Home Base"
 msgstr "{user}'s Home Base"
+
+msgid "{user}'s profile set to private. This setting can be modified in Overwatch under Options – Social."
+msgstr ""
 
 #~ msgid "**ERROR**: The bot requires the ability to embed, make sure it has the 'Embed Links' permission."
 #~ msgstr "**Algo deu errado!**: O bot precisa da permissão de incorporação, certifique-se de liberar a permissão 'Incorporar Links'."
