--- a/tr/LC_MESSAGES/gamestats.po
+++ b/tr/LC_MESSAGES/gamestats.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.1\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2018-04-01 14:09+0100\n"
+"POT-Creation-Date: 2018-07-31 17:11+0100\n"
 "PO-Revision-Date: 2017-08-12 12:53+0100\n"
 "Last-Translator: 🅐glaïs#2150\n"
 "Language: tr\n"
@@ -16,7 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.3\n"
+"Generated-By: Babel 2.6.0\n"
 
 msgid "*Warning*: Different spelling of {user}"
 msgstr ""
@@ -27,8 +27,23 @@ msgstr ""
 msgid "A {platforms} account is required to obtain {game} stats"
 msgstr "{game} istatistiklerini elde etmek için {platforms} hesabı gereklidir"
 
+msgid "Added group category **{category_name}** to {role_count} roles"
+msgstr ""
+
+msgid "Added group category **{name}**: {description}"
+msgstr ""
+
+msgid "Added group {role}"
+msgstr ""
+
+msgid "Added {account}"
+msgstr ""
+
 msgid "Available languages: [{languages}]"
 msgstr "Mevcut diller: [{languages}]"
+
+msgid "Character not found."
+msgstr ""
 
 msgid "Check your DMs"
 msgstr "Gelen mesajları kontrol et"
@@ -37,6 +52,18 @@ msgid ""
 "Click the below icons to join/leave that group:\n"
 "\n"
 "{groups}"
+msgstr ""
+
+msgid "Compiling stats of {number} players..."
+msgstr ""
+
+msgid "Completed reset of {}, {}"
+msgstr ""
+
+msgid "Could not find {user} on {server}, please try again"
+msgstr ""
+
+msgid "Default FC for this server registered as {name} on {server}"
 msgstr ""
 
 msgid "Distance between {user1} and {user2}: {dist}ly"
@@ -48,8 +75,20 @@ msgstr ""
 msgid "Files for {language_key} not found"
 msgstr "{language_key} dosyaları bulunamadı"
 
+msgid ""
+"For this stat please reply with a list of number -> role - one on each line.\n"
+"For example:\n"
+"\n"
+"1000 @Best Rank\n"
+"500 Nearly Best\n"
+"100 Newbie"
+msgstr ""
+
 msgid "I tried to DM you {mention} but you have DMs disabled, please DM me that command."
 msgstr "Sana Direkt Mesaj atmayı denedim {mention} fakat DM'leri kapatmışsın, lütfen bu komut için bana mesaj gönder."
+
+msgid "I'm missing permissions to grant the role {role} to {name}. Please check that I have the Manage Roles permission and {role} is below me in the role list."
+msgstr ""
 
 msgid "Languages reloaded"
 msgstr "Diller tekrar yüklendi"
@@ -66,19 +105,58 @@ msgstr "{platform} üzerinden {game} oyununun {user} kullanıcısına bakılıyo
 msgid "Looking up {user} on {game}..."
 msgstr "{game} oyununun {user} oyuncusuna bakılıyor..."
 
+msgid "No ARK server registered for this server. Register with {prefix}ark register <ip> <port>"
+msgstr ""
+
+msgid "No Battlerite profile found for {profile}."
+msgstr ""
+
+msgid "No CSGO players found on this server. Do {prefix}steam first."
+msgstr ""
+
+msgid "No PUBG players found on this server. Do {prefix}pubg first."
+msgstr ""
+
+msgid "No Siege players found on this server. Do {prefix}siege first."
+msgstr ""
+
+msgid "No characters found on that account. Please confirm account and try again."
+msgstr ""
+
 msgid "No games currently being played."
 msgstr ""
 
 msgid "No groups defined on {server}, use {command}"
 msgstr ""
 
+msgid "No matches found. Submit some via {prefix}csgo match <share code>"
+msgstr ""
+
+msgid "No operator information found for {name} on {platform} {region}"
+msgstr ""
+
+msgid "No ranked CSGO players found on this server. Do {prefix}steam first."
+msgstr ""
+
+msgid "No recent matches found for {account}"
+msgstr ""
+
 msgid "No response from user."
 msgstr "Kullanıcıdan yanıt yok."
+
+msgid "No season information found for {name} on {platform} {region}"
+msgstr ""
 
 msgid "No {game} players found on this server. Do {prefix}{game_key} first."
 msgstr "Bu sunucuda {game} oyuncusu bulunamadı. İlk olarak {prefix}{game_key} yap"
 
 msgid "No {game} stats found for {user} on {platform}"
+msgstr ""
+
+msgid "Player {account} not found"
+msgstr ""
+
+msgid "Player {user} (aka {nickname}) has no stats for season {season}."
 msgstr ""
 
 msgid "Please enter your {game} account name:"
@@ -87,12 +165,27 @@ msgstr "Lütfen {game} hesabının ismini gir:"
 msgid "Portal code"
 msgstr ""
 
+msgid "Prestige role reset cancelled."
+msgstr ""
+
+msgid "Prestige roles not setup for {guild}, game: {game}, stat: {stat}"
+msgstr ""
+
+msgid "Prestige setup cancelled."
+msgstr ""
+
+msgid "Prestige setup complete."
+msgstr ""
+
 msgid ""
 "Profile created. To add accounts use {prefix}add <account>\n"
 "Supported accounts: {accounts}"
 msgstr ""
 "Profil oluşturuldu. hesap eklemek için {prefix}add <account> komutunu kullan\n"
 "Desteklenen hesaplar: {accounts}"
+
+msgid "Removed prestige for {}, {}"
+msgstr ""
 
 msgid "Request accepted"
 msgstr ""
@@ -106,11 +199,26 @@ msgstr ""
 msgid "Requesting permission from {name}"
 msgstr ""
 
+msgid "Resetting Prestige roles..."
+msgstr ""
+
+msgid "Searching for FC {} on {}..."
+msgstr ""
+
+msgid ""
+"Select a stat to base rank on by replying with one from the below list:\n"
+"\n"
+"{}"
+msgstr ""
+
 msgid "Set language for {guild_name} to {language}"
 msgstr "{guild_name} sunucusu için {language} dili belirlendi"
 
 msgid "Shows your stats from {game}"
 msgstr "{game} istatistiklerini gösterir"
+
+msgid "Sorry I can't find {name} on {server}, are you se that's correct?"
+msgstr ""
 
 msgid "Sorry that account isn't on your profile."
 msgstr "Maalesef bu hesap, profilinde yok."
@@ -141,6 +249,9 @@ msgstr ""
 "Desteklenen oyunlar:\n"
 "{games}"
 
+msgid "That group category is already defined for this server."
+msgstr ""
+
 msgid "That user hasn't added an account for {game}"
 msgstr "Kullanıcı, {game} için bir hesap eklemedi"
 
@@ -162,16 +273,43 @@ msgstr ""
 msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
 msgstr ""
 
+msgid "The roles format was incorrect, please try again. (Or cancel with x)"
+msgstr ""
+
+msgid "The user {user} does not appear valid, please check your profile is not private and try again."
+msgstr ""
+
 msgid "The user {user} does not have a {game} profile on {platform}."
 msgstr ""
 
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
 msgstr "Birden fazla eşleşme var. Lütfen doğru seçeneğin numarasını yazarak netleştir?"
 
+msgid ""
+"There was an issue processing that command, please try again.\n"
+"If the issue continues please seek help in the support server on the help menu."
+msgstr ""
+
+msgid "There was an issue retrieving that players stats from the PUBG API. Please try again in a few minutes."
+msgstr ""
+
+msgid "There was an issue retrieving your profile from Uplay. Please try again in a few minutes."
+msgstr ""
+
+msgid ""
+"To set up rank roles do {prefix}prestige <game>\n"
+"\n"
+"Supported games:\n"
+"{games}"
+msgstr ""
+
 msgid "Top {top_count} games currently being played across {server_count} servers"
 msgstr "Şu anda {server_count} sunucu arasında oynanılan başlıca {top_count} oyun"
 
 msgid "Top {top_count} games currently being played in {guild_name}"
+msgstr ""
+
+msgid "WARNING: This will attempt to remove Discord roles related to this Prestige role, are you sure you want to continue?"
 msgstr ""
 
 msgid "Warning: You have multiple accounts for {game} you might want to delete one with {prefix}delete {game_key} or change your primary account with {prefix}primary {game_key}"
@@ -182,8 +320,24 @@ msgid ""
 "To find its location, place a Signal Booster and note down the code it shows when you get close, in the format HUKYA:XXXX:XXXX:XXXX:XXXX"
 msgstr ""
 
+msgid "What is your character's name?"
+msgstr ""
+
+msgid ""
+"What is your steam account? Please reply below.\n"
+"It can be in the form of:\n"
+"Vanity URL (<https://steamcommunity.com/id/name>)\n"
+"Vanity name (name from url above)\n"
+"Profile URL (<https://steamcommunity.com/profiles/123456789012345>)\n"
+"Steam Community ID (123456789012345)\n"
+"Steam ID (STEAM_0:0:0123456)"
+msgstr ""
+
 msgid "What platform do you play {game} on? [{platforms}]"
 msgstr "Hangi platformda {game} oynuyorsun? [{platforms}]"
+
+msgid "What server is your character on?"
+msgstr ""
 
 msgid "You do not have permission to change the language on {guild}."
 msgstr "{guild} sunucusu üzerinde dil değiştirmeye yetkin yok."
@@ -200,6 +354,21 @@ msgstr "{account} hesabını zaten kaydettin"
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr "{game} için bir hesap eklemen gerekiyor, {prefix}add {game_key} yazmalısın"
 
+msgid "You need to add some games, DM me with {prefix}add <account>. See {prefix}accounts for supported accounts."
+msgstr ""
+
+msgid "You took too long to respond, Prestige setup cancelled."
+msgstr ""
+
+msgid "You took too long to respond, prestige setup cancelled."
+msgstr ""
+
+msgid "Your character is not part of any FC."
+msgstr ""
+
+msgid "Your profile is private. This setting can be modified in Overwatch under Options – Social."
+msgstr ""
+
 msgid "{channel} in {guild} registered to receive live match updates."
 msgstr ""
 
@@ -211,6 +380,9 @@ msgstr "{user} için {game} hesabı bulunamadı"
 
 msgid "{game} account not found for {user} on {platform}"
 msgstr "{platform} üzerinde {user} için {game} hesabı bulunamadı"
+
+msgid "{game} is not currently supported, check back soon."
+msgstr ""
 
 msgid "{game} live games for {guild}"
 msgstr ""
@@ -230,7 +402,16 @@ msgstr "{language} dili, mevcut dil listesinde yer almıyor: {languages}"
 msgid "{name} declined"
 msgstr ""
 
+msgid "{name} does not appear to have any stats available."
+msgstr ""
+
+msgid "{user} does not does not appear to be a valid Z8Games user."
+msgstr ""
+
 msgid "{user}'s Home Base"
+msgstr ""
+
+msgid "{user}'s profile set to private. This setting can be modified in Overwatch under Options – Social."
 msgstr ""
 
 #~ msgid "Do you play {game} on PC, PSN or XBL?"
