--- a/zh/LC_MESSAGES/gamestats.po
+++ b/zh/LC_MESSAGES/gamestats.po
@@ -1,13 +1,13 @@
 # Chinese translations for GameStats.
-# Copyright (C) 2018 GameStats
 # This file is distributed under the same license as the GameStats project.
-# Viola#5458, 2017.
+# Copyright (C) 2018 GameStats
+# Viola#5458, 2017. 
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.1\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2018-04-01 14:09+0100\n"
+"POT-Creation-Date: 2018-07-31 17:11+0100\n"
 "PO-Revision-Date: 2017-08-12 12:56+0100\n"
 "Last-Translator: !滥好人#8888\n"
 "Language: zh\n"
@@ -16,7 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.3\n"
+"Generated-By: Babel 2.6.0\n"
 
 msgid "*Warning*: Different spelling of {user}"
 msgstr ""
@@ -27,8 +27,23 @@ msgstr "{guild}的《无人深空》宇宙地图<:nms:346638509114785808>"
 msgid "A {platforms} account is required to obtain {game} stats"
 msgstr "要获得{game}统计，需要一个{platforms}帐户。"
 
+msgid "Added group category **{category_name}** to {role_count} roles"
+msgstr ""
+
+msgid "Added group category **{name}**: {description}"
+msgstr ""
+
+msgid "Added group {role}"
+msgstr ""
+
+msgid "Added {account}"
+msgstr ""
+
 msgid "Available languages: [{languages}]"
 msgstr "可用的语言[{languages}]"
+
+msgid "Character not found."
+msgstr ""
 
 msgid "Check your DMs"
 msgstr "检查你的私信"
@@ -42,6 +57,18 @@ msgstr ""
 "\n"
 "{groups}"
 
+msgid "Compiling stats of {number} players..."
+msgstr ""
+
+msgid "Completed reset of {}, {}"
+msgstr ""
+
+msgid "Could not find {user} on {server}, please try again"
+msgstr ""
+
+msgid "Default FC for this server registered as {name} on {server}"
+msgstr ""
+
 msgid "Distance between {user1} and {user2}: {dist}ly"
 msgstr "{user1}跟{user2}之间的距离：{dist}"
 
@@ -51,8 +78,20 @@ msgstr "到中心的距离"
 msgid "Files for {language_key} not found"
 msgstr "未找到{language_key}的文件。"
 
+msgid ""
+"For this stat please reply with a list of number -> role - one on each line.\n"
+"For example:\n"
+"\n"
+"1000 @Best Rank\n"
+"500 Nearly Best\n"
+"100 Newbie"
+msgstr ""
+
 msgid "I tried to DM you {mention} but you have DMs disabled, please DM me that command."
 msgstr "我试图私信你{mention}，但是你的私信失效了，请私信把那个命令发给我。"
+
+msgid "I'm missing permissions to grant the role {role} to {name}. Please check that I have the Manage Roles permission and {role} is below me in the role list."
+msgstr ""
 
 msgid "Languages reloaded"
 msgstr "语言清单已更新"
@@ -69,14 +108,47 @@ msgstr "在{platform}上查找{user}的{game}。。。"
 msgid "Looking up {user} on {game}..."
 msgstr "正在{game}寻找{user}..."
 
+msgid "No ARK server registered for this server. Register with {prefix}ark register <ip> <port>"
+msgstr ""
+
+msgid "No Battlerite profile found for {profile}."
+msgstr ""
+
+msgid "No CSGO players found on this server. Do {prefix}steam first."
+msgstr ""
+
+msgid "No PUBG players found on this server. Do {prefix}pubg first."
+msgstr ""
+
+msgid "No Siege players found on this server. Do {prefix}siege first."
+msgstr ""
+
+msgid "No characters found on that account. Please confirm account and try again."
+msgstr ""
+
 msgid "No games currently being played."
 msgstr "目前没有正在玩的游戏。"
 
 msgid "No groups defined on {server}, use {command}"
 msgstr "未在{server}上定义组，请使用{command}"
 
+msgid "No matches found. Submit some via {prefix}csgo match <share code>"
+msgstr ""
+
+msgid "No operator information found for {name} on {platform} {region}"
+msgstr ""
+
+msgid "No ranked CSGO players found on this server. Do {prefix}steam first."
+msgstr ""
+
+msgid "No recent matches found for {account}"
+msgstr ""
+
 msgid "No response from user."
 msgstr "此帐户没有回应"
+
+msgid "No season information found for {name} on {platform} {region}"
+msgstr ""
 
 msgid "No {game} players found on this server. Do {prefix}{game_key} first."
 msgstr "在此服务器上找不到{game}玩家。先做{prefix}{game_key}。"
@@ -84,11 +156,29 @@ msgstr "在此服务器上找不到{game}玩家。先做{prefix}{game_key}。"
 msgid "No {game} stats found for {user} on {platform}"
 msgstr "在{platform}上找不到{user}的{game}数据"
 
+msgid "Player {account} not found"
+msgstr ""
+
+msgid "Player {user} (aka {nickname}) has no stats for season {season}."
+msgstr ""
+
 msgid "Please enter your {game} account name:"
 msgstr "请输入你的{game}帐号"
 
 msgid "Portal code"
 msgstr "入口码"
+
+msgid "Prestige role reset cancelled."
+msgstr ""
+
+msgid "Prestige roles not setup for {guild}, game: {game}, stat: {stat}"
+msgstr ""
+
+msgid "Prestige setup cancelled."
+msgstr ""
+
+msgid "Prestige setup complete."
+msgstr ""
 
 msgid ""
 "Profile created. To add accounts use {prefix}add <account>\n"
@@ -96,6 +186,9 @@ msgid ""
 msgstr ""
 "创建个人资料。若要添加帐户，请使用{prefix}添加<account>\n"
 "支持的帐户：{accounts}"
+
+msgid "Removed prestige for {}, {}"
+msgstr ""
 
 msgid "Request accepted"
 msgstr ""
@@ -109,11 +202,26 @@ msgstr ""
 msgid "Requesting permission from {name}"
 msgstr ""
 
+msgid "Resetting Prestige roles..."
+msgstr ""
+
+msgid "Searching for FC {} on {}..."
+msgstr ""
+
+msgid ""
+"Select a stat to base rank on by replying with one from the below list:\n"
+"\n"
+"{}"
+msgstr ""
+
 msgid "Set language for {guild_name} to {language}"
 msgstr "设定{guild_name}的语言到{language}"
 
 msgid "Shows your stats from {game}"
 msgstr "显示{game}的统计信息"
+
+msgid "Sorry I can't find {name} on {server}, are you se that's correct?"
+msgstr ""
 
 msgid "Sorry that account isn't on your profile."
 msgstr "很抱歉,你的个人资料上没有那个账户。"
@@ -144,6 +252,9 @@ msgstr ""
 "支持的游戏：\n"
 "{games}"
 
+msgid "That group category is already defined for this server."
+msgstr ""
+
 msgid "That user hasn't added an account for {game}"
 msgstr "这个帐户没有加入{game}"
 
@@ -165,17 +276,44 @@ msgstr ""
 msgid "The location code must be in the format HUKYA:XXXX:XXXX:XXXX:XXXX Please check your code and try again."
 msgstr "位置代码的格式必须是HUKYA：XXXX：XXXX：XXXX：XXXX：XXXX 请检查你的代码，然后再试一次。"
 
+msgid "The roles format was incorrect, please try again. (Or cancel with x)"
+msgstr ""
+
+msgid "The user {user} does not appear valid, please check your profile is not private and try again."
+msgstr ""
+
 msgid "The user {user} does not have a {game} profile on {platform}."
 msgstr ""
 
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
 msgstr "有多个匹配结果，请用正确选项的数量。"
 
+msgid ""
+"There was an issue processing that command, please try again.\n"
+"If the issue continues please seek help in the support server on the help menu."
+msgstr ""
+
+msgid "There was an issue retrieving that players stats from the PUBG API. Please try again in a few minutes."
+msgstr ""
+
+msgid "There was an issue retrieving your profile from Uplay. Please try again in a few minutes."
+msgstr ""
+
+msgid ""
+"To set up rank roles do {prefix}prestige <game>\n"
+"\n"
+"Supported games:\n"
+"{games}"
+msgstr ""
+
 msgid "Top {top_count} games currently being played across {server_count} servers"
 msgstr "当前在{server_count}服务器上玩的顶级{top_count}游戏"
 
 msgid "Top {top_count} games currently being played in {guild_name}"
 msgstr "当前在{guild_name}中玩的顶级{top_count}游戏"
+
+msgid "WARNING: This will attempt to remove Discord roles related to this Prestige role, are you sure you want to continue?"
+msgstr ""
 
 msgid "Warning: You have multiple accounts for {game} you might want to delete one with {prefix}delete {game_key} or change your primary account with {prefix}primary {game_key}"
 msgstr "警告：你有多个{game}的帐户，你可能要删除一个带有{prefix}的帐户，删除{game_key}，或者用{prefix}主帐户{game_key}"
@@ -187,8 +325,24 @@ msgstr ""
 "NMS主基地的位置是什么？\n"
 "若要查找其位置，请放置一个信号助推器，并记下它在你接近时显示的代码，格式为HUKYA：XXXX：XXXX：XXXX：XXXX：XXXX"
 
+msgid "What is your character's name?"
+msgstr ""
+
+msgid ""
+"What is your steam account? Please reply below.\n"
+"It can be in the form of:\n"
+"Vanity URL (<https://steamcommunity.com/id/name>)\n"
+"Vanity name (name from url above)\n"
+"Profile URL (<https://steamcommunity.com/profiles/123456789012345>)\n"
+"Steam Community ID (123456789012345)\n"
+"Steam ID (STEAM_0:0:0123456)"
+msgstr ""
+
 msgid "What platform do you play {game} on? [{platforms}]"
 msgstr "你在什么平台上玩{game}?[{platforms}]"
+
+msgid "What server is your character on?"
+msgstr ""
 
 msgid "You do not have permission to change the language on {guild}."
 msgstr "你没有权限更改{guild}的语言。"
@@ -205,6 +359,21 @@ msgstr "你已经注册了{account}"
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
 msgstr "你需要一个{game}帐号,请输入{prefix}和{game_key}"
 
+msgid "You need to add some games, DM me with {prefix}add <account>. See {prefix}accounts for supported accounts."
+msgstr ""
+
+msgid "You took too long to respond, Prestige setup cancelled."
+msgstr ""
+
+msgid "You took too long to respond, prestige setup cancelled."
+msgstr ""
+
+msgid "Your character is not part of any FC."
+msgstr ""
+
+msgid "Your profile is private. This setting can be modified in Overwatch under Options – Social."
+msgstr ""
+
 msgid "{channel} in {guild} registered to receive live match updates."
 msgstr "{channel}已注册{guild}来接收实时匹配更新。"
 
@@ -216,6 +385,9 @@ msgstr "在{game}找不到帐号{user}"
 
 msgid "{game} account not found for {user} on {platform}"
 msgstr "在{platform}上找不到{user}的{game}帐户"
+
+msgid "{game} is not currently supported, check back soon."
+msgstr ""
 
 msgid "{game} live games for {guild}"
 msgstr "{guild}的游戏实况{game}"
@@ -235,8 +407,17 @@ msgstr "{language}不是可用的语言: {languages}"
 msgid "{name} declined"
 msgstr ""
 
+msgid "{name} does not appear to have any stats available."
+msgstr ""
+
+msgid "{user} does not does not appear to be a valid Z8Games user."
+msgstr ""
+
 msgid "{user}'s Home Base"
 msgstr "{user}的主页"
+
+msgid "{user}'s profile set to private. This setting can be modified in Overwatch under Options – Social."
+msgstr ""
 
 #~ msgid "Please enter your account name for {game}:"
 #~ msgstr "请输入你{game}的帐户名称："
