--- a/es/LC_MESSAGES/gamestats.po
+++ b/es/LC_MESSAGES/gamestats.po
@@ -59,7 +59,7 @@ msgstr ""
 msgid "Compiling stats of {number} players..."
 msgstr ""
 
-msgid "Completed reset of {}, {}"
+msgid "Completed reset of {game}, {stat_name}"
 msgstr ""
 
 msgid "Could not find {user} on {server}, please try again"
@@ -186,7 +186,7 @@ msgstr ""
 "Perfil creado. Para agregar cuentas usar {prefix}add <account>\n"
 "Cuentas soportadas: {accounts}"
 
-msgid "Removed prestige for {}, {}"
+msgid "Removed prestige for {game}, {stat_name}"
 msgstr ""
 
 msgid "Request accepted"
@@ -204,13 +204,13 @@ msgstr ""
 msgid "Resetting Prestige roles..."
 msgstr ""
 
-msgid "Searching for FC {} on {}..."
+msgid "Searching for FC {name} on {server}..."
 msgstr ""
 
 msgid ""
 "Select a stat to base rank on by replying with one from the below list:\n"
 "\n"
-"{}"
+"{games}"
 msgstr ""
 
 msgid "Set language for {guild_name} to {language}"
