--- a/gamestats.pot
+++ b/gamestats.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GameStats 0.3\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
-"POT-Creation-Date: 2018-07-31 18:14+0100\n"
+"POT-Creation-Date: 2018-08-02 21:05+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,7 +56,7 @@ msgstr ""
 msgid "Compiling stats of {number} players..."
 msgstr ""
 
-msgid "Completed reset of {}, {}"
+msgid "Completed reset of {game}, {stat_name}"
 msgstr ""
 
 msgid "Could not find {user} on {server}, please try again"
@@ -181,7 +181,7 @@ msgid ""
 "Supported accounts: {accounts}"
 msgstr ""
 
-msgid "Removed prestige for {}, {}"
+msgid "Removed prestige for {game}, {stat_name}"
 msgstr ""
 
 msgid "Request accepted"
@@ -199,13 +199,13 @@ msgstr ""
 msgid "Resetting Prestige roles..."
 msgstr ""
 
-msgid "Searching for FC {} on {}..."
+msgid "Searching for FC {name} on {server}..."
 msgstr ""
 
 msgid ""
 "Select a stat to base rank on by replying with one from the below list:\n"
 "\n"
-"{}"
+"{games}"
 msgstr ""
 
 msgid "Set language for {guild_name} to {language}"
