--- a/kor/LC_MESSAGES/gamestats.po
+++ b/kor/LC_MESSAGES/gamestats.po
@@ -57,7 +57,7 @@ msgstr ""
 msgid "Compiling stats of {number} players..."
 msgstr ""
 
-msgid "Completed reset of {}, {}"
+msgid "Completed reset of {game}, {stat_name}"
 msgstr ""
 
 msgid "Could not find {user} on {server}, please try again"
@@ -182,7 +182,7 @@ msgid ""
 "Supported accounts: {accounts}"
 msgstr ""
 
-msgid "Removed prestige for {}, {}"
+msgid "Removed prestige for {game}, {stat_name}"
 msgstr ""
 
 msgid "Request accepted"
@@ -200,13 +200,13 @@ msgstr ""
 msgid "Resetting Prestige roles..."
 msgstr ""
 
-msgid "Searching for FC {} on {}..."
+msgid "Searching for FC {name} on {server}..."
 msgstr ""
 
 msgid ""
 "Select a stat to base rank on by replying with one from the below list:\n"
 "\n"
-"{}"
+"{games}"
 msgstr ""
 
 msgid "Set language for {guild_name} to {language}"
