--- a/pt/LC_MESSAGES/gamestats.po
+++ b/pt/LC_MESSAGES/gamestats.po
@@ -60,7 +60,7 @@ msgstr ""
 msgid "Compiling stats of {number} players..."
 msgstr ""
 
-msgid "Completed reset of {}, {}"
+msgid "Completed reset of {game}, {stat_name}"
 msgstr ""
 
 msgid "Could not find {user} on {server}, please try again"
@@ -187,7 +187,7 @@ msgstr ""
 "Perfil criado com sucesso! Para adicionar contas, use {prefix}add <conta>\n"
 "Contas suportadas: {accounts}"
 
-msgid "Removed prestige for {}, {}"
+msgid "Removed prestige for {game}, {stat_name}"
 msgstr ""
 
 msgid "Request accepted"
@@ -205,13 +205,13 @@ msgstr ""
 msgid "Resetting Prestige roles..."
 msgstr ""
 
-msgid "Searching for FC {} on {}..."
+msgid "Searching for FC {name} on {server}..."
 msgstr ""
 
 msgid ""
 "Select a stat to base rank on by replying with one from the below list:\n"
 "\n"
-"{}"
+"{games}"
 msgstr ""
 
 msgid "Set language for {guild_name} to {language}"
